add runProcBuilder for getting both stdout and stderror.